# SearchEngine

./: CMakeLists.txt  config.ini
SearchEngineLib/: CMakeLists.txt  database_manager.h  link.h  logger.h  main.cpp
http_server/: CMakeLists.txt  http_connection.cpp  http_connection.h  main.cpp
spider/: CMakeLists.txt  database_manager.h  http_utils.cpp  http_utils.h  ini_config.h  link.h  logger.cpp  logger.h  main.cpp  spider.cpp  spider.h  utils.cpp  utils.h
